working but not scraping

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Mongoose Scraper</a>
+            <a class="navbar-brand" href="/">MLB News Mongoose Scraper</a>
         </div>
         
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,8 +39,8 @@
     <div class="overlay"></div>
     <div class="background-img"></div>
     <div class="caption">
-        <h1>Mongoose Scraper</h1>
-        <p>Hacker News Edition</p>
+        <h1>MLB News Mongoose Scraper</h1>
+        <p>MLB News Edition</p>
     </div>
 </div>
 
@@ -69,7 +69,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel"><img id="emoji" src="./assets/img/waving-hand-emoji.png" /> Welcome to Mongoose Scraper<br />Click <a href="/scrape">here</a> to scrape!</h4>
+                <h4 class="modal-title" id="myModalLabel"><img id="glove" src="./assets/img/glove.jpg" /> Welcome to MLB News Scraper<br />Click <a href="/scrape">here</a> to scrape!</h4>
             </div>
         </div>
     </div>
@@ -80,7 +80,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">Articles successfully scraped!</h4>
+                <h4 class="modal-title" id="myModalLabel">Baseball news scraped!</h4>
             </div>
         </div>
     </div>
@@ -94,7 +94,7 @@
             <div id="article-saved-div">
                 <div class="modal-header">
                     <h4 class="modal-title">Article saved!</h4>
-                    <button type="button" class="btn btn-primary add-note-btn">Add A Note</button>
+                    <button type="button" class="btn btn-primary add-note-btn">Add A Comment</button>
                 </div>
             </div>
             
@@ -106,23 +106,23 @@
                             <input id="note-title" class="form-control" type="text" />
                         </div>
                         <div class="form-group">
-                            <label for="note-body">Note:</label>
+                            <label for="note-body">Comment:</label>
                             <textarea id="note-body" class="form-control" rows="10"></textarea>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary save-note-btn">Save Note</button>
+                    <button type="button" class="btn btn-primary save-note-btn">Save Comment</button>
                 </div>
             </div>
 
             <div id="note-saved-div">
-                <h4 class="modal-title">Note saved!</h4>
+                <h4 class="modal-title">You're comment is saved!</h4>
             </div>
         </div>
     </div>
 </div>
 
 <footer class="footer navbar-fixed-bottom">
-        <span class="text-muted text-center">&copy; 2018 Melodie Chi &bull; Hacker News Mongoose Scraper</span>
+        <span class="text-muted text-center">&copy; 2019 Rodnee Knuckles &bull; MLB Mongoose Scraper</span>
 </footer>
