--- a/views/saved.hbs
+++ b/views/saved.hbs
@@ -39,7 +39,7 @@
     <div class="background-img"></div>
     <div class="caption">
         <h1>Mongoose Scraper</h1>
-        <p>Hacker News Edition</p>
+        <p>MLB News</p>
     </div>
 </div>
 
