--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Mongoose Scraper</title>
+    <title>MLB News Mongoose Scraper</title>
 
     <!-- Favicon -->
     {{!-- <link rel="icon" href="../../../../favicon.ico"> --}}
