--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,7 +6,14 @@ body, html {
     width: 100%;
     height: 100%;
 }
-
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: white;
+    background-color: red;
+}
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: #101010;
+    background-color: blue;
+}
 /* 
 ** INIT SCRAPE MODAL
 */
@@ -40,9 +47,7 @@ body, html {
     background: #53bbbb;
 }
 
-/**
-** MAIN 
-**/
+/** ** MAIN **/
 
 .jumbotron {
     position: relative;
@@ -61,9 +66,9 @@ body, html {
     bottom: 0;
     left: 0;
     z-index: auto;
-    background: linear-gradient(#333, black);
-    background-image: linear-gradient(rgb(51, 51, 51), black);
-    opacity: 0.7;
+    /* background: linear-gradient(#333, black); */
+    /* background-image: linear-gradient(rgb(51, 51, 51), black); */
+    /* opacity: 1.7; */
 }
 
 .jumbotron .background-img {
@@ -80,9 +85,7 @@ body, html {
     text-align: center;
 }
 
-/**
-** ARTICLES 
-**/
+/** ** ARTICLES **/
 
 .articles-div {
     margin-bottom: 60px;
