--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,13 +2,12 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="scrape">
+    <meta name="author" content="Rodnee Knuckles">
     <title>MLB News Mongoose Scraper</title>
 
-    <!-- Favicon -->
-    {{!-- <link rel="icon" href="../../../../favicon.ico"> --}}
+    
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Cormorant+SC|Barlow+Condensed|Barlow|Montserrat|Dosis" rel="stylesheet">
