--- a/views/saved.hbs
+++ b/views/saved.hbs
@@ -38,7 +38,7 @@
     <div class="overlay"></div>
     <div class="background-img"></div>
     <div class="caption">
-        <h1>Mongoose Scraper</h1>
+        <h1>MLB News Mongoose Scraper</h1>
         <p>MLB News</p>
     </div>
 </div>
@@ -50,7 +50,7 @@
             <h3>
                 <a href="{{this.link}}" target="_blank" class="article-link">{{this.title}}</a>
             </h3>
-            <button type="button" class="btn btn-default view-note-btn" data-id="{{this._id}}" data-toggle="modal" data-target="#viewNoteModal">View Note</button>
+            <button type="button" class="btn btn-default view-note-btn" data-id="{{this._id}}" data-toggle="modal" data-target="#viewNoteModal">View Comment</button>
             <button type="button" class="btn btn-default unsave-btn" data-id="{{this._id}}" data-toggle="modal" data-target="#unsaveModal">Unsave</button>
         </div>
         <div class="panel-body">
@@ -92,12 +92,12 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary update-note-btn">Update Note</button>
+                    <button type="button" class="btn btn-primary update-note-btn">Update Comment</button>
                 </div>
             </div>
 
             <div id="note-updated-div">
-                <h4 class="modal-title">Note updated!</h4>
+                <h4 class="modal-title">Comment updated!</h4>
             </div>
 
         </div>
@@ -123,5 +123,5 @@
 </div>
 
 <footer class="footer navbar-fixed-bottom">
-    <span class="text-muted text-center">&copy; 2018 Melodie Chi &bull; Hacker News Mongoose Scraper</span>
+    <span class="text-muted text-center">&copy; 2019 Rodnee Knuckles &bull; MLB News Mongoose Scraper</span>
 </footer>
