--- a/views/saved.hbs
+++ b/views/saved.hbs
@@ -55,7 +55,7 @@
         </div>
         <div class="panel-body">
             <p>Source:
-                <a href="https://www.mlb.com"  + {{this.link}} target="_blank">{{this.site}}</a>
+                <a href="https://www.mlb.com" + {{this.link}} target="_blank" class="article-link">{{this.title}}</a>
             </p>
         </div>
     </div>
